--- a/Microsoft.Toolkit.Uwp.SampleApp.iOS/Exclusions.props
+++ b/Microsoft.Toolkit.Uwp.SampleApp.iOS/Exclusions.props
@@ -16,6 +16,9 @@
 		<Page Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\GazeInteraction\**" />
 		<Compile Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\GazeInteraction\**" />
 
+		<Page Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\GazeTracing\**" />
+		<Compile Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\GazeTracing\**" />
+
 		<Page Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\LinkedIn Service\**" />
 		<Compile Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\LinkedIn Service\**" />
 
@@ -54,6 +57,36 @@
 
 		<Page Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\InfiniteCanvas\**" />
 		<Compile Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\InfiniteCanvas\**" />
+		
+		<Page Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\BackdropGammaTransferBrush\**" />
+		<Compile Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\BackdropGammaTransferBrush\**" />
+		
+		<Page Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\BackdropSaturationBrush\**" />
+		<Compile Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\BackdropSaturationBrush\**" />
+		
+		<Page Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\BackdropSepiaBrush\**" />
+		<Compile Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\BackdropSepiaBrush\**" />
+		
+		<Page Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\BackdropInvertBrush\**" />
+		<Compile Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\BackdropInvertBrush\**" />
+		
+		<Page Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\BackgroundTaskHelper\**" />
+		<Compile Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\BackgroundTaskHelper\**" />
+		
+		<Page Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\Connected Animations\**" />
+		<Compile Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\Connected Animations\**" />
+
+		<Page Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\Bing Service\**" />
+		<Compile Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\Bing Service\**" />
+
+		<Page Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\Implicit Animations\**" />
+		<Compile Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\Implicit Animations\**" />
+
+		<Page Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\RadialGradientBrush\**" />
+		<Compile Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\RadialGradientBrush\**" />
+
+		<Page Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\ImageBlendBrush\**" />
+		<Compile Remove="..\Microsoft.Toolkit.Uwp.SampleApp.Shared\SamplePages\ImageBlendBrush\**" />
 	</ItemGroup>
 
 </Project>
