--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,19 +2,13 @@ image: Visual Studio 2017
 
 branches:
   only:
-  - master
-  - rel/2.0.0
-  - rel/2.0.1
-  - rel/2.1.0
-  - rel/2.1.1
-  - rel/2.2.0
-  - rel/3.0.0
+  - uno
 
-environment:
-  SignClientSecret:
-    secure: 5Kl9ANR27CzPrrsGm8ZuJ/Cekxv9QH1xL8AhQaT6nlo=
-  SignClientUser:
-    secure: hVgiMEgTra+fsHTHm20UnsefKzy9peTQenuwITEwEsUXJg8NymUVMcAbOtV1RMkf
+# environment:
+#   SignClientSecret:
+#     secure: 5Kl9ANR27CzPrrsGm8ZuJ/Cekxv9QH1xL8AhQaT6nlo=
+#   SignClientUser:
+#     secure: hVgiMEgTra+fsHTHm20UnsefKzy9peTQenuwITEwEsUXJg8NymUVMcAbOtV1RMkf
 
 skip_branch_with_pr: true
 nuget:
@@ -28,14 +22,15 @@ init:
 - ps: git config --global core.autocrlf true
 
 build_script:
-- ps: .\build\build.ps1 -target=SignNuGet
+- ps: .\build\build.ps1 -target=Package
 
 artifacts:
 - path: .\bin\nupkg\*.nupkg
   
-deploy:
-  provider: NuGet
-  server: https://dotnet.myget.org/F/uwpcommunitytoolkit/api/v2/package
-  api_key:
-    secure: zdiFuDKIh6wae8N0V0rT5b8q1pQjuX/YImNWBAlyGkqS7zCfeIrEUb3up4sTuxaU
-  symbol_server: https://dotnet.myget.org/F/uwpcommunitytoolkit/symbols/api/v2/package
+# deploy:
+#   provider: NuGet
+#   server: https://dotnet.myget.org/F/uwpcommunitytoolkit/api/v2/package
+#   api_key:
+#     secure: zdiFuDKIh6wae8N0V0rT5b8q1pQjuX/YImNWBAlyGkqS7zCfeIrEUb3up4sTuxaU
+#   symbol_server: https://dotnet.myget.org/F/uwpcommunitytoolkit/symbols/api/v2/package
+# 
