--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -25,11 +25,11 @@ steps:
     arguments: -c $(BuildConfiguration)   
   displayName: Set Version
 
-- powershell: .\build\build.ps1 -target=SignNuGet
+- powershell: .\build\build.ps1 -target=Pack
   displayName: Build 
-  env:
-    SignClientSecret: $(SignClientSecret)
-    SignClientUser: $(SignClientUser)
+#  env:
+#    SignClientSecret: $(SignClientSecret)
+#    SignClientUser: $(SignClientUser)
     
 
 - task: PublishBuildArtifacts@1
