--- a/Microsoft.Toolkit.Uwp.Services/Microsoft.Toolkit.Uwp.Services.csproj
+++ b/Microsoft.Toolkit.Uwp.Services/Microsoft.Toolkit.Uwp.Services.csproj
@@ -1,11 +1,13 @@
-<Project Sdk="MSBuild.Sdk.Extras">
+﻿<Project Sdk="MSBuild.Sdk.Extras">
 
   <PropertyGroup>
     <TargetFramework>uap10.0</TargetFramework>
     <Title>Windows Community Toolkit Services</Title>
     <Description>This library enables access to different data sources like Microsoft Translator, Facebook, LinkedIn, and Twitter. It is part of the Windows Community Toolkit.</Description>
     <PackageTags>UWP Toolkit Windows Twitter OAuth Facebook LinkedIn Microsoft Translator</PackageTags>
-  </PropertyGroup>
+		
+		<PackageId>Uno.Microsoft.Toolkit.Uwp.Services</PackageId>
+	</PropertyGroup>
 	<ItemGroup>
 
     <PackageReference Include="winsdkfb" Version="0.12.20161020.4" />
