--- a/Microsoft.Toolkit.Uwp.UI.Controls.Graph/Microsoft.Toolkit.Uwp.UI.Controls.Graph.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls.Graph/Microsoft.Toolkit.Uwp.UI.Controls.Graph.csproj
@@ -6,7 +6,8 @@
     <Description>This library provides Microsoft Graph XAML controls. It is part of the Windows Community Toolkit.</Description>
     <PackageTags>UWP Toolkit Windows Controls Microsoft Graph AadLogin ProfileCard PeoplePicker SharePointFiles</PackageTags>
 
-  </PropertyGroup>
+		<PackageId>Uno.Microsoft.Toolkit.Uwp.UI.Controls.Graph</PackageId>
+	</PropertyGroup>
 
   <ItemGroup>
     <None Remove="Assets\folder.svg" />
