--- a/Microsoft.Toolkit.Uwp.UI/Microsoft.Toolkit.Uwp.UI.csproj
+++ b/Microsoft.Toolkit.Uwp.UI/Microsoft.Toolkit.Uwp.UI.csproj
@@ -9,6 +9,7 @@
 		<UseWindowsDesktopSdk>true</UseWindowsDesktopSdk>
 		<UseWindowsMobileSdk>true</UseWindowsMobileSdk>
 		<NoWarn>$(NoWarn);Uno0001</NoWarn>
+		<PackageId>Uno.Microsoft.Toolkit.Uwp.UI</PackageId>
 	</PropertyGroup>
 	
 	<PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
