--- a/Microsoft.Toolkit.Uwp/Microsoft.Toolkit.Uwp.csproj
+++ b/Microsoft.Toolkit.Uwp/Microsoft.Toolkit.Uwp.csproj
@@ -5,6 +5,7 @@
 		<Title>Windows Community Toolkit</Title>
 		<Description>This package includes code only helpers such as Colors conversion tool, Storage file handling, a Stream helper class, etc.</Description>
 		<PackageTags>UWP Toolkit Windows</PackageTags>
+		<PackageId>Uno.Microsoft.Toolkit.Uwp</PackageId>
 		<UseUwpMetaPackage>true</UseUwpMetaPackage>
 		<NoWarn>$(NoWarn);Uno0001</NoWarn>
 	</PropertyGroup>
