--- a/Microsoft.Toolkit.Uwp.SampleApp.Wasm/Microsoft.Toolkit.Uwp.SampleApp.Wasm.csproj
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Wasm/Microsoft.Toolkit.Uwp.SampleApp.Wasm.csproj
@@ -11,7 +11,7 @@
 	
 	<ItemGroup>
 		<PackageReference Include="Uno.UI" Version="1.31.0-dev.62" />
-		<PackageReference Include="Uno.Wasm.Bootstrap" Version="1.0.0-dev.17" />
+		<PackageReference Include="Uno.Wasm.Bootstrap" Version="1.0.0-dev.23" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
 		<PackageReference Include="Microsoft.TypeScript.Compiler" Version="2.8.3" />
@@ -37,6 +37,14 @@
 		<UpToDateCheckInput Include="ts\**\*" />
 		<UpToDateCheckInput Include="WasmCSS\**\*" />
 		<UpToDateCheckInput Include="WasmScripts\**\*" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="web.config" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Include="web.config" />
 	</ItemGroup>
 
 	<ItemGroup>
