Update nuget package descriptions

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,13 +1,12 @@
 <Project>
 
   <PropertyGroup>
-    <Authors>Microsoft.Toolkit</Authors>
+    <Authors>nventive</Authors>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <NoPackageAnalysis>true</NoPackageAnalysis>
     <PackageIconUrl>https://raw.githubusercontent.com/Microsoft/WindowsCommunityToolkit/master/build/nuget.png</PackageIconUrl>
-    <PackageProjectUrl>https://github.com/Microsoft/WindowsCommunityToolkit</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/Microsoft/WindowsCommunityToolkit/blob/master/license.md</PackageLicenseUrl>
-    <PackageReleaseNotes>v3.0 release https://github.com/Microsoft/WindowsCommunityToolkit/releases</PackageReleaseNotes>
+    <PackageProjectUrl>https://github.com/nventive/Uno.WindowsCommunityToolkit</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/nventive/Uno.WindowsCommunityToolkit/blob/master/license.md</PackageLicenseUrl>
     <Copyright>(c) .NET Foundation and Contributors.  All rights reserved.</Copyright>
     
     <CodeAnalysisRuleSet>$(MSBuildThisFileDirectory)Toolkit.ruleset</CodeAnalysisRuleSet>
